--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "echo 'No build needed for Node.js server'"
+    "build": "echo 'Build completed - Node.js server ready'"
   },
   "keywords": [
     "vape",
