--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "VapeCenter Tiffin Ave",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "@vercel/analytics": "^1.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
